--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
   "dependencies": {
     "jsonwebtoken": "^9.0.2",
     "magic-string": "^0.30.5"
